--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
             "name": "Trinh Tran"
         }
     ],
-    "autoload": {
-        "psr-0": { "": "/" }
+    "require": {
+        "trinhtran/demo-bundle": "dev-master"
     }
 }
