--- a/src/DemoBundle/composer.json
+++ b/src/DemoBundle/composer.json
@@ -3,7 +3,7 @@
     "type": "symfony-bundle",
     "autoload": {
         "psr-0" : {
-            "DemoBundle" : "src"
+            "demo-bundle" : "src"
         }
     }
 }
