--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,6 @@
         }
     ],
     "autoload": {
-        "psr-0": { "": "/" }
-    },
-    "require": {
-        "LSE/demo-bundle": "*"
+        "psr-0": { "": "src/" }
     }
 }
