--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,6 @@
         }
     ],
     "autoload": {
-        "psr-0": { "Acme\\DemoBundle": "" }
+        "psr-0": { "Acme\\DemoBundle": "/" }
     }
 }
